<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_main_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/action_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/lineImageView"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/logoImageView"
            android:background="@drawable/style_line"
            android:translationZ="5dp"/>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/graphic_book" />

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_bar_relative_layout">

            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_main_menu_buttons"
                android:translationZ="4dp"
                android:text="@string/butonJoaca"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:stateListAnimator="@animator/button_pressed_animator"/>

            <Button
                android:id="@+id/button_rezultate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_main_menu_buttons"
                android:text="@string/rezultate"
                android:translationZ="4dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:stateListAnimator="@animator/button_pressed_animator"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button_play"/>

            <Button
                android:id="@+id/button_tips_tricks"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/style_main_menu_buttons"
                android:text="@string/buttonZonaDeRelaxare"
                android:translationZ="4dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:stateListAnimator="@animator/button_pressed_animator"
                android:layout_below="@+id/button_rezultate"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/button_rules"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_main_menu_buttons"
                android:text="@string/butonReguli"
                android:translationZ="4dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:stateListAnimator="@animator/button_pressed_animator"
                android:layout_below="@id/button_tips_tricks"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/star_image_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="427dp"
                android:layout_marginStart="3dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/star" />

            <TextView
                android:id="@+id/points_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_toStartOf="@id/star_image_view" />


        </RelativeLayout>

</RelativeLayout>