<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zonarelaxare.ZonaRelaxareActivity"
    android:background="@drawable/style_main_background">

    <RelativeLayout
        android:id="@+id/action_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/lineImageView"
            android:layout_margin="5dp"
            android:background="@mipmap/back_button" />

        <ImageView
            android:id="@+id/lineImageView"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/logoImageView"
            android:background="@drawable/style_line"
            android:translationZ="5dp"/>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/graphic_book" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar_relative_layout">

        <Button
            android:id="@+id/button_bancuri"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/style_main_menu_buttons"
            android:translationZ="4dp"
            android:text="@string/bancuri"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:stateListAnimator="@animator/button_pressed_animator"/>

        <Button
            android:id="@+id/button_stiai_ca"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/style_main_menu_buttons"
            android:text="@string/stiai_ca"
            android:translationZ="4dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:stateListAnimator="@animator/button_pressed_animator"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_bancuri"/>

        <Button
            android:id="@+id/button_tips_tricks"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/style_main_menu_buttons"
            android:text="@string/tips_and_tricks"
            android:translationZ="4dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:stateListAnimator="@animator/button_pressed_animator"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_stiai_ca"/>

    </RelativeLayout>
</RelativeLayout>