<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameOverConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_main_background"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/action_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/lineImageView"
            android:layout_margin="5dp"
            android:background="@mipmap/back_button" />

        <ImageView
            android:id="@+id/lineImageView"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/logoImageView"
            android:layout_margin="5dp"
            android:background="@drawable/style_line"
            android:translationZ="5dp" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/graphic_book" />

        <TextView
            android:id="@+id/tipul_materiei_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lineImageView"
            android:layout_alignEnd="@+id/lineImageView"
            android:layout_centerVertical="true"
            android:textColor="@color/lineColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_relative_layout"
        app:layout_constraintBottom_toTopOf="@+id/relative_layout_buttons"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">


        <ImageView
            android:id="@+id/star_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="3dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/points_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_toStartOf="@id/star_image_view" />

        <TextView
            android:id="@+id/intrebari_normale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/intrebari_normale"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/intrebari_normale_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intrebari_normale"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orangeThemeColor"
            />

        <TextView
            android:id="@+id/conditii_de_stres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intrebari_normale_text_view"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/conditii_de_stres"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/conditii_de_stres_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditii_de_stres"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orangeThemeColor"
            />

        <TextView
            android:id="@+id/adevarat_fals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditii_de_stres_text_view"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/adevarat_fals"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/adevarat_fals_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/adevarat_fals"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orangeThemeColor"
            />

        <TextView
            android:id="@+id/nota_finala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adevarat_fals_text_view"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/nota_finala"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/nota_finala_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nota_finala"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/orangeThemeColor"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <Button
            android:id="@+id/menu_button"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:background="@drawable/style_joaca_button"
            android:text="Meniu"
            android:translationZ="8dp"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/reincearca_button"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:background="@drawable/style_joaca_button"
            android:text="Incearca\n din nou"
            android:translationZ="8dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>